# weather-batch

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  env.list.template  pom.xml  time.sh
src/main/java/com/myorg/weather/batch/: WeatherBatchMain.java
src/main/resources/: application.properties
weather-batch-java/: pom.xml
weather-batch-java/src/main/docker/: Dockerfile.jvm  Dockerfile.native
weather-batch-java/src/main/java/com/myorg/weather/batch/: WeatherBatchMain.java  WeatherBatchService.java
weather-batch-rust/: Cargo.toml  Dockerfile
weather-batch-rust/src/: main.rs  service.rs  weather_batch_service.rs
weather-batch-scala/: .scalafmt.conf  build.sbt
weather-batch-scala/project/: plugins.sbt
weather-batch-scala/src/main/docker/: Dockerfile.jvm
weather-batch-scala/src/main/resources/: application.conf
weather-batch-scala/src/main/scala/com/myorg/: Main.scala  TypetalkSettings.scala  WeatherBatchMain.scala  WeatherBatchService.scala
