[package]
name = "weather-batch-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/tokio-rs/tokio
tokio = { version = "1.15.0", features = ["full"] }
# https://github.com/seanmonstar/reqwest
reqwest = { version = "0.11", features = ["json"] }
# https://github.com/serde-rs/serde
serde = { version = "1.0.131", features = ["derive"] }
# https://github.com/serde-rs/json
serde_json = "1.0.73"
# https://github.com/rust-lang/log
log = "0.4.14"
# https://github.com/env-logger-rs/env_logger
env_logger = "0.9.0"
# https://github.com/softprops/envy
envy = "0.4"
# https://github.com/chronotope/chrono
chrono = "0.4"
# https://github.com/Alex-PK/chrono-locale
chrono_locale = "0.1"
# https://github.com/dtolnay/indoc
indoc = "1.0"
